data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1848.wast
;; 9. **Forward and Backward Branching Combined**:    - Scenario with mixed forward (`br`) and backward (`br_if`) branching within nested blocks. Forward branches exit the block, while `br_if` branches backward within the current block. Validate correct control flow and stack handling.    - **Constraint**: Mixed forward and backward branches should resolve correctly concerning their respective labels.    - **Focus**: Ensures mixed-direction branches are accurately managed within nested blocks.

(assert_invalid
  (module (func $forward-and-backward-branching
    (block (result i32) 
      (block (result i32) 
        (i32.const 42)
        (br_if 1 (i32.const 1)) 
        (i32.const 0)
        (br 1)
      )
    )
  ))
  "type mismatch"
)